tools/flowc/tests/errors/error41.flow
Cons(head : int);
WithHead(tail: string);
main() {
    x = WithHead("xz");
    x.head;
}
